version 4.12 (20xx-yy-zz) Only pass a proxy-authentication token if it is
	actually set to something. Made it possible to configure
	tcp_no_delay on or off.

version 4.11 (2012-02-16) Cleanup of the request logging. Make sure that
	logging is done off the selector threads so that we can call
	external loggers. Added configurable traffic usage loggers so that
	it is easy to log user network traffic usage. Extracted cache
	configuration to its own interface and moved the ncache
	implementation to its own package. The CacheEntry interface was
	cleaned up so that it is easier to implement and easier to use,
	some methods that were only for internal usage were removed. More
	fixes for http headers reading, when the header has been split
	into many different blocks on the network.

version 4.10 (2011-06-29) Fixed a problem with StackOverflow for chunked
	resources with many small chunks. Updated rnio to version
	1.2. Fixed a problem with enlarging an already large data buffer
	data buffer. Fixed a problem that caused some bytes to get lost
	when a data buffer were enlarged. Updated the cache_only config so
	that rabbit starts without warnings. Try to return the data buffer
	in a few more cases. Updated javadocs.

version 4.9 (2011-01-18) Added a jndi context for database resources. Made
	it easier to use external classes for databases by adding custom
	class loading. Stopped using TCP_NO_DELAY. Fixed a problem that
	caused RequestLineTooLongException to be thrown in some rare
	cases. Much updates of the javadoc. Added a filter that blocks
	sites using a sql database table of hosts. Update the rnio
	library.

version 4.8 (2010-10-27) Big javadoc update. Add support for filtering
	of connect requests. Fixed the problem where the log file got
	filled with IllegalStateException when repack was on. Handle
	character encodings and http header content better. Handle semi
	transparent images better when using the java based image